# mathquest

./: README.md  pyproject.toml
deploy/: README.md  deploy.py  setup.sh  update.sh  wsgi.py
src/mathquest/: __init__.py  __main__.py  app.py
src/mathquest/static/css/: style.css
src/mathquest/templates/: base.html  choose_difficulty.html  dashboard.html  game.html  gameover.html  leaderboard.html  login.html
